fix main and footer overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,6 @@ header {
   text-align: center;
 }
 
-main {
-  position: absolute;
-}
+/* main { */
+  /* position: absolute; */
+/* } */
